add-license-dependabot: 2025-06-22 21:44 -

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
-    "Lua.diagnostics.globals": [
-        "doSpeedWalk",
-        "mudlet"
-    ]
+  "Lua.diagnostics.globals": [
+    "doSpeedWalk",
+    "mudlet"
+  ],
+  "Lua.runtime.version": "Lua 5.1",
 }
